<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-dependencies</artifactId>
		<version>3.4.0-RC1</version>
		<relativePath />
	</parent>
	<groupId>exemple</groupId>
	<artifactId>exemple-service</artifactId>
	<version>4.0.0-SNAPSHOT</version>
	<packaging>pom</packaging>
	<organization>
		<name>EXEMPLE</name>
	</organization>

	<modules>
		<module>exemple-service-context</module>
		<module>exemple-service-application</module>
		<module>exemple-service-resource</module>
		<module>exemple-service-schema</module>
		<module>exemple-service-customer</module>
		<module>exemple-service-store</module>
		<module>exemple-service-api</module>
		<module>exemple-service-integration-authorization-server</module>
		<module>exemple-service-api-launcher</module>
		<module>jacoco-report</module>
	</modules>

	<scm>
		<connection>scm:git:git://github.com/doudouchat/exemple-service.git</connection>
		<developerConnection>scm:git:https://github.com/doudouchat/exemple-service.git</developerConnection>
		<url>https://github.com/doudouchat/exemple-service</url>
		<tag>HEAD</tag>
	</scm>

	<distributionManagement>
		<repository>
			<id>github</id>
			<name>GitHub doudouchat Packages</name>
			<url>https://maven.pkg.github.com/doudouchat/exemple-service</url>
		</repository>
	</distributionManagement>

	<properties>

		<maven.build.timestamp.format>yyyy-MM-dd</maven.build.timestamp.format>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<maven.compiler.source>21</maven.compiler.source>
		<maven.compiler.target>21</maven.compiler.target>

		<!-- VERSION -->
		<cassandra-version>5.0.2</cassandra-version>
		<zookeeper.version>3.9.2</zookeeper.version>
		<jacoco-version>0.8.12</jacoco-version>

		<!-- SONAR -->
		<sonar.coverage.exclusions>**/test/**/*.java</sonar.coverage.exclusions>
		<sonar.coverage.report.path>${basedir}/../jacoco-report/target/site/jacoco-aggregate/jacoco.xml</sonar.coverage.report.path>

		<!-- force sonar to use jacoco -->
		<sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>

	</properties>

	<dependencyManagement>

		<dependencies>

			<!-- JAKARTA EL -->

			<dependency>
				<groupId>org.glassfish</groupId>
				<artifactId>jakarta.el</artifactId>
				<version>4.0.2</version>
			</dependency>

			<!-- CURATOR -->
			<!-- https://curator.apache.org -->

			<dependency>
				<groupId>org.apache.curator</groupId>
				<artifactId>curator-recipes</artifactId>
				<version>5.7.0</version>
			</dependency>

			<!-- JSON PATCH -->
			<!-- https://github.com/flipkart-incubator/zjsonpatch -->

			<dependency>
				<groupId>com.flipkart.zjsonpatch</groupId>
				<artifactId>zjsonpatch</artifactId>
				<version>0.4.16</version>
			</dependency>

			<!-- JSON SCHEMA -->

			<dependency>
				<groupId>com.networknt</groupId>
				<artifactId>json-schema-validator</artifactId>
				<version>1.5.2</version>
			</dependency>

			<!-- COMMONS APACHE -->

			<dependency>
				<groupId>commons-io</groupId>
				<artifactId>commons-io</artifactId>
				<version>2.17.0</version>
			</dependency>

			<!-- GOOGLE GUAVA -->
			<!-- https://github.com/google/guava -->

			<dependency>
				<groupId>com.google.guava</groupId>
				<artifactId>guava</artifactId>
				<version>33.3.0-jre</version>
			</dependency>

			<!-- SWAGGER -->

			<!-- https://github.com/swagger-api/swagger-core/wiki/Swagger-2.X -->
			<dependency>
				<groupId>io.swagger.core.v3</groupId>
				<artifactId>swagger-jaxrs2-jakarta</artifactId>
				<version>2.2.23</version>
			</dependency>

			<dependency>
				<groupId>io.swagger.core.v3</groupId>
				<artifactId>swagger-annotations</artifactId>
				<version>2.2.23</version>
			</dependency>

			<!-- MOCK SERVER -->

			<dependency>
				<groupId>org.mock-server</groupId>
				<artifactId>mockserver-netty</artifactId>
				<version>5.15.0</version>
				<scope>test</scope>
			</dependency>

			<dependency>
				<groupId>org.mock-server</groupId>
				<artifactId>mockserver-client-java</artifactId>
				<version>5.15.0</version>
				<scope>test</scope>
			</dependency>

		</dependencies>
	</dependencyManagement>

	<dependencies>

		<!-- LOGGING -->

		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
		</dependency>

		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>jcl-over-slf4j</artifactId>
		</dependency>

		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>jul-to-slf4j</artifactId>
		</dependency>

		<!-- LOGBACK -->

		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
		</dependency>

		<!-- YAML -->

		<dependency>
			<groupId>org.yaml</groupId>
			<artifactId>snakeyaml</artifactId>
		</dependency>

		<!-- LOMBOK -->

		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
		</dependency>

		<!-- JUNIT -->

		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<scope>test</scope>
		</dependency>

		<!-- ASSERTJ -->

		<dependency>
			<groupId>org.assertj</groupId>
			<artifactId>assertj-core</artifactId>
			<scope>test</scope>
		</dependency>

	</dependencies>

	<build>
		<pluginManagement>
			<plugins>
				<!-- COMPILATION -->
				<!-- http://maven.apache.org/plugins/maven-compiler-plugin/ -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<configuration>
						<annotationProcessorPaths>
							<path>
								<groupId>org.projectlombok</groupId>
								<artifactId>lombok</artifactId>
								<version>${lombok.version}</version>
							</path>
						</annotationProcessorPaths>
					</configuration>
				</plugin>

				<!-- WAR -->
				<!-- http://maven.apache.org/plugins/maven-war-plugin/ -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-war-plugin</artifactId>
					<configuration>
						<archive>
							<manifest>
								<addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
								<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
							</manifest>
							<manifestEntries>
								<Built-By>${project.organization.name}</Built-By>
								<Build-Time>${maven.build.timestamp}</Build-Time>
							</manifestEntries>
						</archive>
					</configuration>
				</plugin>

				<!-- JAR -->
				<!-- http://maven.apache.org/plugins/maven-jar-plugin/index.html -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-jar-plugin</artifactId>
					<configuration>
						<archive>
							<manifest>
								<addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
								<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
							</manifest>
							<manifestEntries>
								<Built-By>${project.organization.name}</Built-By>
								<Build-Time>${maven.build.timestamp}</Build-Time>
							</manifestEntries>
						</archive>
					</configuration>
				</plugin>

				<!-- TEST UNITAIRE -->
				<!-- http://maven.apache.org/plugins/maven-surefire-plugin/ -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<configuration>
						<argLine>${jacoco.test.agent.argLine}</argLine>
					</configuration>
				</plugin>

				<!-- VERSION -->
				<!-- https://www.mojohaus.org/versions-maven-plugin/index.html -->
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>versions-maven-plugin</artifactId>
					<configuration>
						<processDependencyManagement>false</processDependencyManagement>
						<outputFile>${project.build.directory}/outdated-dependencies.txt</outputFile>
						<outputEncoding>${project.build.sourceEncoding}</outputEncoding>
					</configuration>
				</plugin>

				<!-- JACOCO -->
				<!-- http://www.eclemma.org/jacoco/trunk/doc/maven.html -->
				<plugin>
					<groupId>org.jacoco</groupId>
					<artifactId>jacoco-maven-plugin</artifactId>
					<version>${jacoco-version}</version>
					<executions>
						<execution>
							<id>prepare-jacoco-ut-agent</id>
							<goals>
								<goal>prepare-agent</goal>
							</goals>
							<phase>process-test-classes</phase>
							<configuration>
								<propertyName>jacoco.test.agent.argLine</propertyName>
								<includes>
									<include>com.exemple.service.*</include>
								</includes>
							</configuration>
						</execution>
						<execution>
							<id>report</id>
							<goals>
								<goal>report</goal>
							</goals>
						</execution>
					</executions>
				</plugin>

				<!-- RELEASE -->
				<!-- http://maven.apache.org/maven-release/maven-release-plugin/ -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-release-plugin</artifactId>
					<version>3.1.1</version>
				</plugin>

				<!-- CLEAN FILE -->
				<!-- http://maven.apache.org/plugins/maven-clean-plugin/ -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-clean-plugin</artifactId>
					<configuration>
						<failOnError>false</failOnError>
					</configuration>
				</plugin>

			</plugins>
		</pluginManagement>

		<plugins>
			<!-- COMPILATION -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
			</plugin>

			<!-- RESSOURCES -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin</artifactId>
			</plugin>

			<!-- TEST UNITAIRE -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
			</plugin>

			<!-- JACOCO -->
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
			</plugin>

			<!-- HELPER -->
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>build-helper-maven-plugin</artifactId>
			</plugin>

			<!-- RELEASE -->

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-release-plugin</artifactId>
			</plugin>

			<!-- JAR -->

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
			</plugin>

			<!-- ENFORCER -->

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-enforcer-plugin</artifactId>
				<executions>
					<execution>
						<id>enforce-maven</id>
						<goals>
							<goal>enforce</goal>
						</goals>
						<configuration>
							<rules>
								<requireMavenVersion>
									<version>3.5.4</version>
								</requireMavenVersion>
							</rules>
						</configuration>
					</execution>
				</executions>
			</plugin>

		</plugins>
	</build>

</project>
